@@ -476,6 +476,8 @@ Bug(WPE) fast/speechsynthesis [ Skip ]
 Bug(WPE) fast/sub-pixel [ Skip ]
 Bug(WPE) fast/table [ Skip ]
 Bug(WPE) fast/text [ Skip ]
+Bug(WPE) fast/text/woff2-totalsfntsize.html [ Pass ]
+Bug(WPE) fast/text/woff2.html [ Pass ]
 Bug(WPE) fast/text-autosizing [ Skip ]
 Bug(WPE) fast/visual-viewport [ Skip ]
 Bug(WPE) fast/writing-mode [ Skip ]
