@@ -1,3 +1,12 @@
+2018-03-22  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [WPE] Enable WOFF2 support
+        https://bugs.webkit.org/show_bug.cgi?id=178158
+
+        Reviewed by Frédéric Wang.
+
+        * wpe/jhbuild.modules: Add "brotli" and "woff2" to the JHBuild moduleset.
+
 2018-03-07  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK][WPE] Leak checker is not working in WebKitGLib web process tests
